Source/WebCore/animation/KeyframeEffect.h
@@ -164,9 +164,8 @@ public:
     const HashSet<AnimatableCSSProperty>& acceleratedProperties() const { return m_acceleratedProperties; }
     const HashSet<AnimatableCSSProperty>& acceleratedPropertiesWithImplicitKeyframe() const { return m_acceleratedPropertiesWithImplicitKeyframe; }
 
+    bool animatesMotionPath() const;
     bool computeExtentOfTransformAnimation(LayoutRect&) const;
-    bool computeTransformedExtentViaTransformList(const FloatRect&, const RenderStyle&, LayoutRect&) const;
-    bool computeTransformedExtentViaMatrix(const FloatRect&, const RenderStyle&, LayoutRect&) const;
     bool forceLayoutIfNeeded();
 
     enum class Accelerated : bool { No, Yes };
